--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   image_cropper:
   image_picker:
   dotted_border:
+  render:
 
 
   # The following adds the Cupertino Icons font to your application.
